<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mk_0_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kodogyu@khu.ac.kr">kodogyu</maintainer>
  <license>TODO: License declaration</license>

  <depend>gazebo_ros_pkgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!--Search for model, plugin and media paths exported by packages.-->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
